# dynamis

./: AUTHORS  Makefile.in  NEWS  README  configure  configure.ac  configure.in  configure.scan  mkinstalldirs
data/: 5_member_hypercycle.ode  chawanya.ode  ecology.ode  ecosave.data  periodical.ode  spatial_ecology.ode  spatial_replicator.ode  speciation.ode  template.ode
doc/: index.html  model.tex
src/: Makefile  Makefile.am  Makefile.in  ecology.c  ecology.h  ecology.ode  image.R  main.c  matrices.c  matrices.h  ode_solver.c  ode_solver.h  png_util.c  png_util.h  replicator.c  replicator.h  show.gnuplot  spatial_ecology.c  spatial_ecology.h  spatial_replicator.c  spatial_replicator.h  speciation.c  speciation.h  utils.c  utils.h
